# django-femtolytics

./: LICENSE  PROTOCOL.md  README.md  boot_django.py  boot_urls.py  load_tests.py  makemigrations.py  setup.cfg  setup.py
.github/: FUNDING.yml
femtolytics/: PROTOCOL.md  admin.py  apiurls.py  apps.py  forms.py  handler.py  models.py  tests.py  urls.py  views.py
femtolytics/api/: urls.py  views.py
femtolytics/migrations/: 0001_initial.py  0002_auto_20200722_0329.py  0003_auto_20200731_1326.py  0003_visitor_first_session.py  0004_visitor_first_session.py  0005_crash.py  0006_goal.py
femtolytics/templates/femtolytics/: apps.html  apps_add.html  apps_instructions.html  base.html  crash.html  crashes.html  dashboard.html  goal.html  goals.html  navbar.html  session.html  sessions.html  visitor.html  visitors.html
femtolytics/templates/femtolytics/fragments/: session.html
femtolytics/tests/: __init__.py  models.py
femtolytics/tests/api/: action.py  event.py
