[metadata]
name = django-femtolytics
version = 1.0.0
description = Minimalistic Analytics for Mobile Applications
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/femtolytics/django-femtolytics
license = BSD 2-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 3.0
    djangorestframework >= 3.11
    python-dateutil >= 2.8
